Fix for panel-expand overflow

--- a/public/components/nmsprime.css
+++ b/public/components/nmsprime.css
@@ -401,3 +401,8 @@ table .index_check {
   from{ opacity:0 }
   to{ opacity:1 }
 }
+
+.flex-column
+{
+overflow-y: auto !important;
+}
